# scene-viewer

./: .gitignore  Cargo.toml  renovate.json  rustfmt.toml
crates/render-common/: Cargo.toml
crates/render-common/shaders/: geometry.slang  test.slang  triangle.slang
crates/render-common/src/: lib.rs
crates/render-vulkan/: Cargo.toml
crates/render-vulkan/src/: allocation.rs  init.rs  lib.rs  mesh.rs  mesh_renderer.rs  raii.rs  staging.rs  suballocated_buffer.rs  swapchain.rs
crates/scene-viewer/: Cargo.toml
crates/scene-viewer/src/: main.rs
tools/build-tool/: Cargo.toml
tools/build-tool/src/: main.rs
