[workspace]
members = ["crates/*", "tools/*"]
resolver = "3"

[workspace.dependencies]
render-common = { path = "crates/render-common" }
render-vulkan = { path = "crates/render-vulkan" }

anyhow = "1"
ash = "0.38"
ash-window = "0.13"
bytemuck = "1.22"
glam = "0.30"
gpu-allocator = { version = "0.27", default-features = false }
indicatif = "0.17.11"
parking_lot = "0.12"
raw-window-handle = "0.6"
offset-allocator = "0.2"
rayon = "1"
sdl3 = "0.14"

[profile.profiling]
inherits = "release"
debug = true
