[package]
name = "render-vulkan"
version = "0.1.0"
edition = "2024"

[dependencies]
render-common.workspace = true

anyhow.workspace = true
ash = { workspace = true, features = ["std"] }
ash-window.workspace = true
bytemuck = { workspace = true, features = ["extern_crate_alloc"] }
glam = { workspace = true, features = ["bytemuck"] }
gpu-allocator = { workspace = true, features = ["vulkan"] }
offset-allocator.workspace = true
parking_lot.workspace = true
raw-window-handle.workspace = true
